--- a/assets/scss/system/navigationHeader/navigationHeader.scss
+++ b/assets/scss/system/navigationHeader/navigationHeader.scss
@@ -110,6 +110,7 @@
     .m-navHead--hamburger {
         font-size: 26px;
         width: 44px;
+        margin-bottom: 0 !important;
 
         &::before,
         &::after,
